--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,9 @@ default: &default
 development:
   <<: *default
   database: storage/development.sqlite3
+  <<: *default
+  database: storage/development_cache.sqlite3
+  migrations_paths: db:cache_migrate
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,3 +30,7 @@ production:
   primary:
     <<: *default
     database: storage/production.sqlite3
+  cache:
+    <<: *default
+    database: storage/production_cache.sqlite3
+    migrations_paths: db/cache_migrate
