--- a/config/database.yml
+++ b/config/database.yml
@@ -10,11 +10,13 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: storage/development.sqlite3
-  <<: *default
-  database: storage/development_cache.sqlite3
-  migrations_paths: db:cache_migrate
+  primary:
+    <<: *default
+    database: storage/development.sqlite3
+  cache:
+    <<: *default
+    database: storage/development_cache.sqlite3
+    migrations_paths: db:cache_migrate
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
